fixed responsiveness there was white space when changing to smaller px

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,8 +2,8 @@
   margin-bottom: 50px;
 }
 
-/* html { height: 100% }
-body { min-height: 100% } */
+html { min-height: 100% }
+/* body { min-height: 100% } */
 
 #indexnav{
   background-color: transparent;
@@ -39,7 +39,7 @@ row2 {
   /* background :rgba(0, 151, 19, 0.1); */
   background-color: rgba(194, 200, 205, 0.9);
   /* width: 750px; */
-  margin-bottom: 0;
+  /* margin-bottom: 0; */
   /* height: 980px; */
   /* border: 4px solid rgb(1, 2, 5, 0.7); */
   padding: 10px;
@@ -48,6 +48,9 @@ row2 {
   align-items: center;
   justify-content: center;
   margin-bottom: 4em;
+  /* height: inherit; */
+  min-height: max-content;
+  height: max-content;
 
 
 }
@@ -170,6 +173,7 @@ aside {
   /* border: 8px solid rgb(37, 88, 106); */
   margin-top: 30px;
   text-align: center;
+  /* height: 100%; */
   /* background-color: rgba(0, 0, 255, 0.1); */
 }
 
@@ -180,6 +184,7 @@ aside {
 #footer{
 max-width: auto;
 margin-top: 20px;
+/* height: max-content; */
 }
 
 .footer {
@@ -190,6 +195,7 @@ margin-top: 20px;
   text-align: center;
   font-family: "Cinzel", serif;
   width: 100%;
+ 
   
   /* height: 100px; */
 
@@ -201,6 +207,7 @@ margin-top: 20px;
   margin-right: auto;
   text-align: center;
   transform: 2.07 !important;
+  height: 100%;
 }
 
 #call:hover {
@@ -262,7 +269,7 @@ img:hover {
 }
 body{
   width: 100%;
-    height: 100%;
+   
   image-rendering: auto;
   image-rendering: crisp-edges;
   image-rendering: pixelated;
@@ -282,6 +289,8 @@ body{
 
 #demi{
   margin-top: 2em;
-  margin-bottom: 2em;
+  margin-bottom: 6em;
+  height: max-content;
+  height: 100%;
 
 }
